--- a/conteudo/css/estilo.css
+++ b/conteudo/css/estilo.css
@@ -11,14 +11,11 @@ body {
 
 #video-player {
   border-radius: 5px;
-}
-
-/************************************
-************Classes*****************/
-.box-video {
-  margin: 10% auto;
-  align-items: center;
-  width: 1080px;
-  height: 607px;
-  /*border: 2px #000 solid;*/
+  background: #000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
 }
